--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
+:root{
+  --bg-purple-gradient: linear-gradient(to top, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+  --bg-bottom-gradient: linear-gradient(to right, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+  --bg-top-gradient: linear-gradient(to left, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+  --bg-body-color: hsl(270, 20%, 96%);
+  --bg-submit-button: hsl(271, 36%, 24%);
+  --color-radio-border: hsl(289, 100%, 72%);
+}
+
 /* reset */
-* {
+*, *::before, *::after{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-/* base styles */
+
+/* General styles */
 body {
-  background-color: hsl(270, 20%, 96%);
+  background-color: var(--bg-body-color);
   display: grid;
   width: 100%;
   grid-template-columns: 14% 9% 5% 14% 14% 22% 9% 14%;
@@ -22,6 +32,14 @@ img {
   border-radius: 10px;
 }
 
+h1 {
+  font-size: 0.8rem;
+}
+
+p{
+  font-size: 0.5rem;
+}
+
 .phone {
   height: 500px;
   width: 230px;
@@ -31,14 +49,11 @@ img {
   grid-column-start: 3;
   grid-row-start: 2;
   position: relative;
-  box-shadow:5px 5px 30px rgb(110, 109, 109);
-  /* position: sticky;
-  left: 80px;
-  top: 200px; */
+  box-shadow:5px 5px 30px #6e6d6d64;
 }
 
 .inside {
-  background-color: hsl(270, 20%, 96%);
+  background-color: var(--bg-body-color);
   height: 420px;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
@@ -51,7 +66,7 @@ img {
   width: 100%;
   height: 60px;
   background-color: hsl(276, 100%, 81%);
-  background-image: linear-gradient(to left, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+  background-image: var(--bg-top-gradient);
   border-top-left-radius:30px ;
   border-top-right-radius: 30px;
   padding: 15px;
@@ -110,14 +125,6 @@ img {
   height: 4px;
 }
 
-h1 {
-  font-size: 0.8rem;
-}
-
-p{
-  font-size: 0.5rem;
-}
-
 .sender {
   width: 115px;
   padding: 8px;
@@ -149,7 +156,7 @@ p{
 }
 
 .bottom {
-  background-image: linear-gradient(to right, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+  background-image: var(--bg-bottom-gradient);
   width: 170px;
   height: 35px;
   margin-top: 7px;
@@ -211,6 +218,7 @@ span{
   grid-row-start: 3;
   margin-bottom: 30px;
 }
+
 .extra h1 {
   color: hsl(271, 36%, 24%);
   margin: 3rem 0 1.5rem;
@@ -225,8 +233,7 @@ span{
 }
 
 .purple {
-  background: linear-gradient(to top, hsl(293, 100%, 63%), hsl(264, 100%, 61%));;
-  /* position:absolute; */
+  background: var(--bg-purple-gradient);
   grid-column-start: 1;
   grid-column-end: 4;
   grid-row-start: 1;
@@ -237,6 +244,7 @@ span{
   border-bottom-left-radius: 200px;
   border-bottom-right-radius: 200px;
 } 
+
 .ash {
   background-color: hsl(300, 8%, 93%);
   grid-column-start: 7;
@@ -245,9 +253,8 @@ span{
   grid-row-end: 7;
   border-top-left-radius: 300px;
 }
-/* fonts */
-/* mobile styles */
-/* tablet styles */
+
+/* Responsiveness for mobile */
 @media (max-width:750px) {
   body {
     grid-template-columns: 14% 9% 5% 14% 14% 22% 9% 14%;
@@ -273,4 +280,3 @@ span{
     grid-row-end: 9;
   }
 }
-/* desktop styles  */
